# gitbrowser

./: .gitignore  .gitmodules  CMakeLists.txt  WaitingWindow.qml  commitinfo.cpp  filesbrowser.cpp  filesbrowser.h  filesbrowser.ui  gitbrowser.qrc  gitmanager.cpp  gitmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.h  newdocument.cpp  newdocument.h  newdocument.ui  passwordprovider.cpp  passwordprovider.h  qitwalker.pro  reposettings.cpp  reposettings.h  reposettings.ui  syncdialog.cpp  syncdialog.h  syncdialog.ui  texteditor.cpp  texteditor.h  texteditor.ui  versionbrowserdialog.cpp  versionbrowserdialog.h  versionbrowserdialog.ui
askpass/: CMakeLists.txt  askpass.pro  main_unix.cpp  main_win.cpp  passwordreciever.cpp  passwordreciever.h
git/: commitinfo.h  gitmanager.cpp  gitmanager.h  shell.cpp  shell.h
qml/: MainWindow.qml  RepoModel.qml  RepoPanel.qml
repotree/: qjsmodel.cpp  qjsmodel.h  treeitemdelegate.cpp  treeitemdelegate.h
